--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -1,24 +1,25 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">{{ company_name }}</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-    aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item " *ngFor="let menu of menus ">
-        <a class="nav-link" routerLink="{{ menu.link }}" routerLinkActive="['is-active']">{{ menu.menu_name }}
-        </a>
-      </li>
-    </ul>
-  </div>
-  <div class="row mr-sm-2">
-    logged in as {{ username }}
-    <span>
-      <i class="material-icons icon-space" (click)="logout()">
-        exit_to_app
-      </i>
-    </span>
-
-  </div>
-</nav>
+<div *ngIf="authData">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
+    <a class="navbar-brand" href="#">{{ company_name }}</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item " *ngFor="let menu of menus_all | async">
+          <a class="nav-link" routerLink="{{ menu.menu_link }}" routerLinkActive="['is-active']">{{ menu.menu_name }}
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="row mr-sm-2">
+      logged in as {{ authData.username }}
+      <span>
+        <i class="material-icons icon-space" (click)="logout()">
+          exit_to_app
+        </i>
+      </span>
+    </div>
+  </nav>
+</div>
