--- a/src/app/dialogs/common-dialog/common-dialog.component.html
+++ b/src/app/dialogs/common-dialog/common-dialog.component.html
@@ -1,47 +1,74 @@
 <div class="modal-header">
-  <h4 class="modal-title">{{ form_type }}</h4>
+  <h4 class="modal-title">{{ form_type.description }}</h4>
   <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
 <div class="modal-body">
-  <form [formGroup]="KitchenForm">
-    <div class="form-group">
-      <label for="foodTypeCode">ລະຫັດ ຫ້ອງຄົວ</label>
-      <input type="text" formControlName="kitchen_code" required class="form-control" tabindex="0" id="foodTypeCode">
-    </div>
-    <div class="form-group">
-      <label for="foodTypeNameEn">ຊື່ ຫ້ອງຄົວ</label>
-      <input type="text" formControlName="kitchen_name" required class="form-control" tabindex="1" id="foodTypeNameEn">
-    </div>
-    <div class="form-group">
-      <label for="foodTypeNameLa">ຜຸ້ຮັບຜີດຊອບ</label>
-      <select class="form-control" formControlName="userId">
-        <option value="" disabled>-------</option>
-        <option value="{{ chef.id }}" *ngFor="let chef of chefs">{{ chef.username }}</option>
-      </select> </div>
-  </form>
-  <!--
-  Food Form
--->
+  <div [ngSwitch]="form_type.form">
 
-  <form [formGroup]="FoodInfo">
-    <div class="form-group">
-      <label for="foodTypeCode">ລະຫັດ ຫ້ອງຄົວ</label>
-      <input type="text" formControlName="kitchen_code" required class="form-control" tabindex="0" id="foodTypeCode">
+    <!-- Kitchen Form -->
+    <div *ngSwitchCase="'kitchen'">
+      <form [formGroup]="KitchenForm">
+        <div class="form-group">
+          <label for="foodTypeCode">ລະຫັດ ຫ້ອງຄົວ</label>
+          <input type="text" formControlName="kitchen_code" required class="form-control" tabindex="0" id="foodTypeCode">
+        </div>
+        <div class="form-group">
+          <label for="foodTypeNameEn">ຊື່ ຫ້ອງຄົວ</label>
+          <input type="text" formControlName="kitchen_name" required class="form-control" tabindex="1" id="foodTypeNameEn">
+        </div>
+        <div class="form-group">
+          <label for="foodTypeNameLa">ຜຸ້ຮັບຜີດຊອບ</label>
+          <select class="form-control" formControlName="userId">
+            <option value="" disabled>-------</option>
+            <option value="{{ chef.id }}" *ngFor="let chef of chefs">{{ chef.username }}</option>
+          </select> </div>
+      </form>
     </div>
-    <div class="form-group">
-      <label for="foodTypeNameEn">ຊື່ ຫ້ອງຄົວ</label>
-      <input type="text" formControlName="kitchen_name" required class="form-control" tabindex="1" id="foodTypeNameEn">
+    <!-- End Kitchen Form -->
+    <!-- Food Form -->
+    <div *ngSwitchCase="'food'">
+      <form [formGroup]="FoodInfo">
+        <div class="form-group">
+          <label for="foodTypeCode">ຊື່ອາຫານ</label>
+          <input type="text" formControlName="food_name" required class="form-control" tabindex="0" id="foodTypeCode">
+        </div>
+        <div class="form-group">
+          <label for="foodTypeNameEn">ຕົ້ນທຶນ</label>
+          <input type="number" formControlName="cost" required class="form-control" tabindex="1" id="foodTypeNameEn">
+        </div>
+        <div class="form-group">
+          <label for="foodTypeNameEn">ລາຄາ</label>
+          <input type="number" formControlName="price" required class="form-control" tabindex="1" id="foodTypeNameEn">
+        </div>
+        <div class="form-group">
+          <label for="foodtypeselect">ປະເພດອາຫານ</label>
+          <div class="food_type-div">
+            <select id="foodtypeselect" class="form-control col col-md-6" formControlName="foodtypeId">
+              <option value="-1" disabled>...</option>
+              <option value="{{ ft.id }}" *ngFor="let ft of foodtypes ">{{
+                ft.food_type_desc_la }}</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="kitcheneselect">ຄົວ</label>
+          <div class="food_type-div">
+            <select id="kitcheneselect" class="form-control col col-md-6" formControlName="kitchenId">
+              <option value="-1" disabled>...</option>
+              <option value="{{ ks.id }}" *ngFor="let ks of kitchens ">{{ ks.kitchen_name }}</option>
+            </select>
+          </div>
+        </div>
+      </form>
     </div>
-    <div class="form-group">
-      <label for="foodTypeNameLa">ຜຸ້ຮັບຜີດຊອບ</label>
-      <select class="form-control" formControlName="userId">
-        <option value="" disabled>-------</option>
-        <option value="{{ chef.id }}" *ngFor="let chef of chefs">{{ chef.username }}</option>
-      </select> </div>
-  </form>
+    <!--End Food Form -->
+
+
+  </div>
+
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-outline-dark" (click)="addKitchen()">ບັນທຶກ</button>
+  <button type="button" class="btn btn-outline-dark" (click)="updateFood()">ບັນທຶກ</button>
 </div>
