--- a/src/app/payments/payment-confirm/payment-confirm.component.html
+++ b/src/app/payments/payment-confirm/payment-confirm.component.html
@@ -1,3 +1,58 @@
-<p>
-  payment-confirm works!
-</p>
+<div class="card">
+  <div class="card-header">
+    Payment confirmation
+  </div>
+  <div class="card-body">
+    <div class="card">
+      <div class="card-body">
+        <div class="display-4 text-center">
+          <small>ລວມ</small> {{ data | number }} <small>ກິບ</small>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-body">
+        <form [formGroup]="paymentForm">
+          <div class="form-group row">
+            <label for="customerSelect" class="col-sm-2 col-form-label">ລູກຄ້າ</label>
+            <div class="col-sm-10">
+              <select id="customerSelect" required class="form-control">
+                <option value="-1" disabled>------</option>
+                <option value="{{ customer.id }}" *ngFor="let customer of customers">{{ customer.fullname }}</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="ticketSelect" class="col-sm-2 col-form-label">Ticket</label>
+            <div class="col-sm-3">
+              <select id="ticketSelect" required class="form-control">
+                <option value="-1" disabled>------</option>
+                <option value="{{ ticket.id }}" *ngFor="let ticket of tickets">{{ ticket.tick_number }}</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="recievedAmountTxt" class="col-sm-2 col-form-label">ຮັບມາ</label>
+            <div class="col-sm-10">
+              <input type="number" value="{{ data }}" required (keyup)="paymentRecieveChange($event.target.value)"
+                class="form-control" id="recievedAmountTxt">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="recievedAmountTxt" class="col-sm-2 col-form-label">ທອນ</label>
+            <div class="col-sm-10">
+              <input type="number" required readonly value="{{ change }}" class="form-control" id="recievedAmountTxt">
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="card-footer">
+        <div class="text-center">
+          <button type="button" (click)="payment()" class="btn btn-lg btn-danger payment-btn">Pay</button>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+</div>
