--- a/src/app/payments/payment-confirm/payment-confirm.component.html
+++ b/src/app/payments/payment-confirm/payment-confirm.component.html
@@ -6,7 +6,7 @@
     <div class="card">
       <div class="card-body">
         <div class="display-4 text-center">
-          <small>ລວມ</small> {{ data | number }} <small>ກິບ</small>
+          <small>ລວມ</small> {{ data.grandtotal | number }} <small>ກິບ</small>
         </div>
       </div>
     </div>
@@ -16,7 +16,7 @@
           <div class="form-group row">
             <label for="customerSelect" class="col-sm-2 col-form-label">ລູກຄ້າ</label>
             <div class="col-sm-10">
-              <select id="customerSelect" required class="form-control">
+              <select id="customerSelect" required class="form-control" (change)="customerIdChange($event.target.value)">
                 <option value="-1" disabled>------</option>
                 <option value="{{ customer.id }}" *ngFor="let customer of customers">{{ customer.fullname }}</option>
               </select>
@@ -25,7 +25,7 @@
           <div class="form-group row">
             <label for="ticketSelect" class="col-sm-2 col-form-label">Ticket</label>
             <div class="col-sm-3">
-              <select id="ticketSelect" required class="form-control">
+              <select id="ticketSelect" required class="form-control" (change)="ticketIdChange($event.target.value)">
                 <option value="-1" disabled>------</option>
                 <option value="{{ ticket.id }}" *ngFor="let ticket of tickets">{{ ticket.tick_number }}</option>
               </select>
@@ -34,7 +34,7 @@
           <div class="form-group row">
             <label for="recievedAmountTxt" class="col-sm-2 col-form-label">ຮັບມາ</label>
             <div class="col-sm-10">
-              <input type="number" value="{{ data }}" required (keyup)="paymentRecieveChange($event.target.value)"
+              <input type="number" value="{{ data.grandtotal }}" required (keyup)="paymentRecieveChange($event.target.value)"
                 class="form-control" id="recievedAmountTxt">
             </div>
           </div>
@@ -48,11 +48,9 @@
       </div>
       <div class="card-footer">
         <div class="text-center">
-          <button type="button" (click)="payment()" class="btn btn-lg btn-danger payment-btn">Pay</button>
+          <button type="button" (click)="payment()" [disabled]="paymentProcess" class="btn btn-lg btn-danger btn-block">Pay</button>
         </div>
-
       </div>
     </div>
-
   </div>
 </div>
