--- a/src/app/pages/foods/foods.component.css
+++ b/src/app/pages/foods/foods.component.css
@@ -341,6 +341,14 @@ margin-left: 0;
     }
 }
 
+.foodImg {
+  position: absolute;
+  top: 70px;
+  right: 5px;
+  max-width: 100px;
+  max-height: 100px;
+  border: 1 #53646f;
+}
 
 @media screen and (max-width: 680px){
   .table-row {
