--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="authData">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top">
     <a class="navbar-brand" href="#">{{ company_name }}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -7,13 +7,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item " *ngFor="let menu of menus_all | async">
+        <li class="nav-item" *ngFor="let menu of menus_all | async">
           <a class="nav-link" routerLink="{{ menu.menu_link }}" routerLinkActive="['is-active']">{{ menu.menu_name }}
           </a>
         </li>
       </ul>
     </div>
-    <div class="row mr-sm-2">
+    <div class="row mr-sm-2 right-div">
       logged in as {{ authData.username }}
       <span>
         <i class="material-icons icon-space" (click)="logout()">
