--- a/src/app/pages/kitchenmonitor/kitchenmonitor.component.html
+++ b/src/app/pages/kitchenmonitor/kitchenmonitor.component.html
@@ -4,17 +4,46 @@
   </div>
   <div class="card-body">
     <ul class="list-group">
-      <li class="list-group-item" *ngFor="let ticket of ticketQ">
+      <li class="list-group-item" *ngFor="let ticket of order_tracks.order">
         <div class="row">
-          <div class="col col-md-4">
-            <div class="qDiv">
-              <a>{{ ticket.ticket_number }}</a>
+          <div class="col col-md-2 text-center">
+            <div class="qDiv shadow p-3 mb-5 bg-dark rounded">
+              <div class="col h5"><strong>Ticket</strong></div>
+              <a class="display-4 ">{{ ticket[0].tick_number }}</a>
+            </div>
+          </div>
+          <div class="col col-md-4 text-center">
+            <div class="qDiv shadow p-3 mb-5 bg-dark rounded">
+              <div class="col "><strong>ລາຍການອາຫານ</strong></div>
+              <ul class="list-group" *ngFor="let food of ticket ; index as i">
+                <li class="list-group-item bg-dark">
+                  <div class="row">
+                    <div class="col col-md-1  text-center">{{ i + 1 }} </div>
+                    <div class="col col-md-4 text-left"><strong>{{ food.food_name }} </strong></div>
+                    <div class="col col-md-3 text-left">ຈຳນວນ <strong>{{ food.quantity }}</strong> </div>
+                    <div class="col col-md-4 text-left noteColor h4" *ngIf="food.note != 'undefined'"><span class="note-div">{{
+                        food.note }}</span></div>
+                  </div>
+                </li>
+              </ul>
             </div>
           </div>
           <div class="col col-md-4">
-
+            <div class="qDiv shadow p-3 mb-5 bg-dark rounded">
+              <div class="col text-center"><strong>ເວລາ</strong></div>
+              <ul class="list-group bg-dark">
+                <li class="list-group-item bg-dark">
+                  <span class="ordertimeDiv">ເວລາສັ່ງ</span> <span>{{ ticket[0].order_datetime |
+                    date: 'HH:mm:ss' }}</span>
+                </li>
+                <li class="list-group-item bg-dark">
+                  <span class="ordertimeDiv">ຜ່ານໄປແລ້ວ</span> <span>{{ getTimeOrderRemaing(ticket[0].order_datetime)
+                    }}</span>
+                </li>
+              </ul>
+            </div>
           </div>
-          <div class="col col-md-4"></div>
+
         </div>
       </li>
     </ul>
